--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jatin's 365 Strength Tracker</title>
+    <title>365 Strength Tracker</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -21,13 +21,13 @@
 
     <section id="page-weeks" class="page active">
         <header class="mb-4 text-center pt-6">
-            <h1 class="text-3xl font-black italic tracking-tighter uppercase tracking-widest text-blue-500">PRO-LEVEL JATIN</h1>
+            <h1 class="text-3xl font-black italic tracking-tighter uppercase tracking-widest text-blue-500">PRO-LEVEL TRAINING</h1>
         </header>
 
         <div class="mb-8 px-2">
             <div class="glass p-5 rounded-2xl border-l-4 border-blue-500 relative">
                 <p class="text-lg font-black italic uppercase leading-tight tracking-tighter text-gray-200">
-                    "Laziness is a guest that eventually becomes the master. <span class="text-blue-500">Today, Jatin, you remain the master.</span>"
+                    "Laziness is a guest that eventually becomes the master. <span class="text-blue-500">Today, you remain the master.</span>"
                 </p>
                 <p class="text-[10px] text-gray-500 mt-2 font-bold uppercase tracking-widest">— Discipline over Motivation</p>
             </div>
